adding some fatures

--- a/project.html
+++ b/project.html
@@ -12,6 +12,12 @@
         <nav class="nav">
             <div class="logopic">
                 <h1 class="name">Blue Diamond</h1>
+                <div class="stars">
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                </div>
                 <img class="diamond" src="diamond1.jpg">
             </div>
             <ul class="navigation">
@@ -35,16 +41,14 @@
 <section class="container">
 <div class="all">
     <h3>Хотел Blue Diamond</h3>
-Семеен хотел "Blue Diamond" се намира в курортно селище Китен, едно от известните и примамливи кътове по южното черно-морско
-крайбрежие.
-
-Хотела е отворил врати през 2006 година, като всичко в него е съобразено с комфортния престой на гостите.
-
+Семеен хотел "Blue Diamond" се намира в курортно селище Приморско, едно от известните и примамливи кътове по южното черно-морско
+крайбрежие. Хотелът ще ви подари една страхотна и комфортна почивка със стилния си и уютен интериор, панорамната гледка към Черно море и
+близостта към нежния пясък на Южния плаж.
 Персоналът ще се погрижи за Вашето удобство и добро настроение!
 </div>
 <div class="listhotel">
     <h3>В стаите</h3>
-    <ul>
+    <ul class="ekstri">
      <li>санитарен възел</li>
      <li>телевизор с кабелна</li>
      <li>климатик</li>
@@ -55,10 +59,15 @@
 </div>
 <div class="hotoffer">
     <h3>Горещи оферти</h3>
-    3.01.2019
-    РАННИ ЗАПИСВАНИЯ СЕЗОН 2019!
-    Всеки наш клиент направил резервация до 31 Март 2019г. без посредни...
+    3.01.2020
+    РАННИ ЗАПИСВАНИЯ СЕЗОН 2020!
+    Всеки наш клиент направил резервация до 31 Март 2020г. без посредни...
 </div>
+</section>
+<section class="frontgalery">
+    <img class="snimki" src="163479686.jpg" alt="163479686">
+    <img class="snimki" src="173264599.jpg" alt="173264599">
+    <img class="snimki" src="173458888.jpg" alt="173458888">
 </section>
     </main>
     <footer>
