--- a/project.html
+++ b/project.html
@@ -71,7 +71,30 @@
 </section>
     </main>
     <footer>
-
+        <section class="footer">
+ <div class="find">
+    <h6 class="mreji"> Намерете ни в социалните мрежи</h6>
+    <p>
+    </p>
+ </div>
+ <div class="divuslugi">
+     <h6 class="titleuslugi">Услуги</h6>
+     <ul class="uslugi">
+         <li>Конферентни зали</li>
+         <li>Фризьорски Салон</li>
+         <li>Детски кът</li>
+         <li>Румсервиз</li>
+         <li>Пакети</li>
+     </ul>
+ </div>
+ <div>
+     <ul class="contacts">
+         <li><b>Рецепция:</b> +359 2 492 109</li>
+         <li><b>Моб:</b> +359 878 21 88 98</li>
+         <li><b>E-mail:</b> bluediamond@abv.bg</li>
+     </ul>
+ </div>
+</section>
     </footer>
     
 </body>
