--- a/project.html
+++ b/project.html
@@ -21,11 +21,11 @@
                 <img class="diamond" src="diamond1.jpg">
             </div>
             <ul class="navigation">
-                <li>Начало</li>
+                <li><a href="project.html/">Начало</a></li>
                 <li>Резервации</li>
                 <li>Настаняване</li>
-                <li>Галерия</li>
-                <li>Карта</li>
+                <li><a href="galery.html">Галерия</a></li>
+                <li><a href="kontakti.html">Карта</a></li>
                 <li>Контакти</li>
             </ul>
             <img class="flag" src="flag.jpg">
