--- a/kontakti.html
+++ b/kontakti.html
@@ -7,37 +7,49 @@
     <link rel="stylesheet" href="project.css">
     <title>Document</title>
 </head>
-<body>
-    <header>
-        <nav class="nav">
-            <div class="logopic">
-                <h1 class="name">Blue Diamond</h1>
-                <div class="stars">
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                    <i class="fa fa-star"></i>
-                </div>
-                <img class="diamond" src="diamond1.jpg">
+<header>
+    <nav class="nav">
+        <div class="logopic">
+            <h1 class="name">Blue Diamond</h1>
+            <div class="stars">
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
+                <i class="fa fa-star"></i>
             </div>
-            <ul class="navigation">
-                <li><a href="project.html">Начало</a></li>
-                <li>Резервации</li>
-                <li>Настаняване</li>
-                <li>Галерия</li>
-                <li>Карта</li>
-                <li>Контакти</li>
-            </ul>
-            <img class="flag" src="flag.jpg">
-            <img class="english" src="english.jpg">
-            <img class="sun" src="sun.jpg">
-        </nav>
-        <div class="seadiv">
-            <img class="sea" src="181402759.jpg">
+            <img class="diamond" src="pcs/diamond1.jpg">
         </div>
-    </header>
+        <ul class="navigation">
+            <li><a href="project.html/">Начало</a></li>
+            <li>Резервации</li>
+            <li>Настаняване</li>
+            <li><a href="galery.html">Галерия</a></li>
+            <li><a href="kontakti.html">Карта</a></li>
+            <li>Контакти</li>
+        </ul>
+        <img class="flag" src="pcs/flag1.jpg">
+        <img class="english" src="pcs/english.jpg">
+        <img class="sun" src="pcs/sun.jpg">
+    </nav>
+    <div class="seadiv">
+        <img class="sea" src="pcs/181402759.jpg">
+    </div>
+</header>
     <main>
-
+        <h2 class="contact">Контакти</h2>
+     <section class="cardcontainer">
+     <div><img class="map" src="pcs/Map_Primorsko.jpg" alt=""></div>
+     <div class="address">
+        Хотел "Blue diamond" - гр. Приморско <br>
+        Адрес: Ул.”Бриз” 7,<br>
+        8183, гр. Приморско, България<br>
+        GPS координати: N 42.235887 E 27.777469<br>
+        Рецепция: +359 2 492 109<br>
+        Моб: +359 878 21 88 98<br>
+        web:www.bludiamond.com <br>
+        e-mail: info@bludiamond.com<br>
+     </div>
+    </section>
     </main>
     <footer>
         <section class="footer">
@@ -65,6 +77,5 @@
             </div>
         </section>
     </footer>
-    
     </body>
     </html>
