--- a/project.html
+++ b/project.html
@@ -18,7 +18,7 @@
                 <i class="fa fa-star"></i>
                 <i class="fa fa-star"></i>
                 </div>
-                <img class="diamond" src="diamond1.jpg">
+                <img class="diamond" src="pcs/diamond1.jpg">
             </div>
             <ul class="navigation">
                 <li><a href="project.html/">Начало</a></li>
@@ -28,12 +28,12 @@
                 <li><a href="kontakti.html">Карта</a></li>
                 <li>Контакти</li>
             </ul>
-            <img class="flag" src="flag.jpg">
-            <img class="english" src="english.jpg">
-            <img class="sun" src="sun.jpg">
+            <img class="flag" src="pcs/flag1.jpg">
+            <img class="english" src="pcs/english.jpg">
+            <img class="sun" src="pcs/sun.jpg">
         </nav>
         <div class="seadiv">
-        <img class="sea" src="181402759.jpg">
+        <img class="sea" src="pcs/181402759.jpg">
         </div>
     </header>
     <main>
@@ -41,7 +41,7 @@
 <section class="container">
 <div class="all">
     <h3>Хотел Blue Diamond</h3>
-Семеен хотел "Blue Diamond" се намира в курортно селище Приморско, едно от известните и примамливи кътове по южното черно-морско
+Хотел "Blue Diamond" се намира в курортно селище Приморско, едно от известните и примамливи кътове по южното черно-морско
 крайбрежие. Хотелът ще ви подари една страхотна и комфортна почивка със стилния си и уютен интериор, панорамната гледка към Черно море и
 близостта към нежния пясък на Южния плаж.
 Персоналът ще се погрижи за Вашето удобство и добро настроение!
@@ -65,9 +65,9 @@
 </div>
 </section>
 <section class="frontgalery">
-    <img class="snimki" src="163479686.jpg" alt="163479686">
-    <img class="snimki" src="173264599.jpg" alt="173264599">
-    <img class="snimki" src="173458888.jpg" alt="173458888">
+    <img class="snimki" src="pcs/163479686.jpg" alt="163479686">
+    <img class="snimki" src="pcs/173264599.jpg" alt="173264599">
+    <img class="snimki" src="pcs/173458888.jpg" alt="173458888">
 </section>
     </main>
     <footer>
@@ -96,6 +96,5 @@
  </div>
 </section>
     </footer>
-    
 </body>
 </html>
