--- a/galery.html
+++ b/galery.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="project.css">
-    <title>Document</title>
+    <title>Blue diamant</title>
 </head>
+
 <body>
     <header>
         <nav class="nav">
@@ -18,26 +20,26 @@
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
                 </div>
-                <img class="diamond" src="diamond1.jpg">
+                <img class="diamond" src="pcs/diamond1.jpg">
             </div>
             <ul class="navigation">
-                <li><a href="project.html">Начало</a></li>
+                <li><a href="project.html/">Начало</a></li>
                 <li>Резервации</li>
                 <li>Настаняване</li>
-                <li>Галерия</li>
-                <li>Карта</li>
+                <li><a href="galery.html">Галерия</a></li>
+                <li><a href="kontakti.html">Карта</a></li>
                 <li>Контакти</li>
             </ul>
-            <img class="flag" src="flag.jpg">
-            <img class="english" src="english.jpg">
-            <img class="sun" src="sun.jpg">
+            <img class="flag" src="pcs/flag1.jpg">
+            <img class="english" src="pcs/english.jpg">
+            <img class="sun" src="pcs/sun.jpg">
         </nav>
         <div class="seadiv">
-            <img class="sea" src="181402759.jpg">
+            <img class="sea" src="pcs/181402759.jpg">
         </div>
     </header>
     <main>
-
+        
     </main>
     <footer>
         <section class="footer">
@@ -65,7 +67,5 @@
             </div>
         </section>
     </footer>
-
 </body>
-
 </html>
