--- a/galery.html
+++ b/galery.html
@@ -23,12 +23,12 @@
                 <img class="diamond" src="pcs/diamond1.jpg">
             </div>
             <ul class="navigation">
-                <li><a href="project.html/">Начало</a></li>
+                <li><a href="project.html">Начало</a></li>
                 <li>Резервации</li>
                 <li>Настаняване</li>
                 <li><a href="galery.html">Галерия</a></li>
-                <li><a href="kontakti.html">Карта</a></li>
-                <li>Контакти</li>
+                <li><a href="kontakti.html">Контакти</a></li>
+                <li>Политика</li>
             </ul>
             <img class="flag" src="pcs/flag1.jpg">
             <img class="english" src="pcs/english.jpg">
@@ -39,7 +39,17 @@
         </div>
     </header>
     <main>
-        
+        <h2 class="hgalery">Галерия</h2>
+        <section class="firstsection">
+        <img class="pichotel" src="pcs/Room.jpg" alt="Room">
+        <img class="pichotel" src="pcs/Hotel_.jpg" alt="hotel">
+        <img class="pichotel" src="pcs/lobby.jpg" alt="lobby">
+        </section>
+        <section class="secondsection">
+            <img class="pichotel" src="pcs/Restaurant.jpg" alt="Room">
+            <img class="pichotel" src="pcs/Dish.jpg" alt="Dish">
+            <img class="pichotel" src="pcs/fruit.jpg" alt="fruit">
+        </section>
     </main>
     <footer>
         <section class="footer">
