--- a/kontakti.html
+++ b/kontakti.html
@@ -20,12 +20,12 @@
             <img class="diamond" src="pcs/diamond1.jpg">
         </div>
         <ul class="navigation">
-            <li><a href="project.html/">Начало</a></li>
+            <li><a href="project.html">Начало</a></li>
             <li>Резервации</li>
             <li>Настаняване</li>
             <li><a href="galery.html">Галерия</a></li>
-            <li><a href="kontakti.html">Карта</a></li>
-            <li>Контакти</li>
+            <li><a href="kontakti.html">Контакти</a></li>
+            <li>Политика</li>
         </ul>
         <img class="flag" src="pcs/flag1.jpg">
         <img class="english" src="pcs/english.jpg">
@@ -36,7 +36,7 @@
     </div>
 </header>
     <main>
-        <h2 class="contact">Контакти</h2>
+       
      <section class="cardcontainer">
      <div><img class="map" src="pcs/Map_Primorsko.jpg" alt=""></div>
      <div class="address">
