--- a/project.html
+++ b/project.html
@@ -25,8 +25,8 @@
                 <li>Резервации</li>
                 <li>Настаняване</li>
                 <li><a href="galery.html">Галерия</a></li>
-                <li><a href="kontakti.html">Карта</a></li>
-                <li>Контакти</li>
+                <li><a href="kontakti.html">Контакти</a></li>
+                <li>Политика</li>
             </ul>
             <img class="flag" src="pcs/flag1.jpg">
             <img class="english" src="pcs/english.jpg">
