--- a/kontakti.html
+++ b/kontakti.html
@@ -36,8 +36,8 @@
     </div>
 </header>
     <main>
-       
-     <section class="cardcontainer">
+        <h3 class="cont">Контакти</h3>
+        <section class="cardcontainer">
      <div><img class="map" src="pcs/Map_Primorsko.jpg" alt=""></div>
      <div class="address">
         Хотел "Blue diamond" - гр. Приморско <br>
@@ -70,6 +70,7 @@
             </div>
             <div>
                 <ul class="contacts">
+                    <h4 class="kntakti">Контакти</h4>
                     <li><b>Рецепция:</b> +359 2 492 109</li>
                     <li><b>Моб:</b> +359 878 21 88 98</li>
                     <li><b>E-mail:</b> bluediamond@abv.bg</li>
