--- a/project.html
+++ b/project.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,16 +8,17 @@
     <link rel="stylesheet" href="project.css">
     <title>Blue diamant</title>
 </head>
+
 <body>
     <header>
         <nav class="nav">
             <div class="logopic">
                 <h1 class="name">Blue Diamond</h1>
                 <div class="stars">
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
-                <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
+                    <i class="fa fa-star"></i>
                 </div>
                 <img class="diamond" src="pcs/diamond1.jpg">
             </div>
@@ -33,68 +35,72 @@
             <img class="sun" src="pcs/sun.jpg">
         </nav>
         <div class="seadiv">
-        <img class="sea" src="pcs/181402759.jpg">
+            <img class="sea" src="pcs/181402759.jpg">
         </div>
     </header>
     <main>
-<h2 class="name2">Начало</h2>
-<section class="container">
-<div class="all">
-    <h3>Хотел Blue Diamond</h3>
-Хотел "Blue Diamond" се намира в курортно селище Приморско, едно от известните и примамливи кътове по южното черно-морско
-крайбрежие. Хотелът ще ви подари една страхотна и комфортна почивка със стилния си и уютен интериор, панорамната гледка към Черно море и
-близостта към нежния пясък на Южния плаж.
-Персоналът ще се погрижи за Вашето удобство и добро настроение!
-</div>
-<div class="listhotel">
-    <h3>В стаите</h3>
-    <ul class="ekstri">
-     <li>санитарен възел</li>
-     <li>телевизор с кабелна</li>
-     <li>климатик</li>
-     <li>сейф</li>
-     <li>стая с изглед към морето</li>
-     <li>хладилник</li>
-    </ul>
-</div>
-<div class="hotoffer">
-    <h3>Горещи оферти</h3>
-    3.01.2020
-    РАННИ ЗАПИСВАНИЯ СЕЗОН 2020!
-    Всеки наш клиент направил резервация до 31 Март 2020г. без посредни...
-</div>
-</section>
-<section class="frontgalery">
-    <img class="snimki" src="pcs/163479686.jpg" alt="163479686">
-    <img class="snimki" src="pcs/173264599.jpg" alt="173264599">
-    <img class="snimki" src="pcs/173458888.jpg" alt="173458888">
-</section>
+        <h2 class="name2">Начало</h2>
+        <section class="container">
+            <div class="all">
+                <h3>Хотел Blue Diamond</h3>
+                Хотел "Blue Diamond" се намира в курортно селище Приморско, едно от известните и примамливи кътове по
+                южното черно-морско
+                крайбрежие. Хотелът ще ви подари една страхотна и комфортна почивка със стилния си и уютен интериор,
+                панорамната гледка към Черно море и
+                близостта към нежния пясък на Южния плаж.
+                Персоналът ще се погрижи за Вашето удобство и добро настроение!
+            </div>
+            <div class="listhotel">
+                <h3>В стаите</h3>
+                <ul class="ekstri">
+                    <li>санитарен възел</li>
+                    <li>телевизор с кабелна</li>
+                    <li>климатик</li>
+                    <li>сейф</li>
+                    <li>стая с изглед към морето</li>
+                    <li>хладилник</li>
+                </ul>
+            </div>
+            <div class="hotoffer">
+                <h3>Горещи оферти</h3>
+                3.01.2020
+                РАННИ ЗАПИСВАНИЯ СЕЗОН 2020!
+                Всеки наш клиент направил резервация до 31 Март 2020г. без посредни...
+            </div>
+        </section>
+        <section class="frontgalery">
+            <img class="snimki" src="pcs/163479686.jpg" alt="163479686">
+            <img class="snimki" src="pcs/173264599.jpg" alt="173264599">
+            <img class="snimki" src="pcs/173458888.jpg" alt="173458888">
+        </section>
     </main>
     <footer>
         <section class="footer">
- <div class="find">
-    <h6 class="mreji"> Намерете ни в социалните мрежи</h6>
-    <p>
-    </p>
- </div>
- <div class="divuslugi">
-     <h6 class="titleuslugi">Услуги</h6>
-     <ul class="uslugi">
-         <li>Конферентни зали</li>
-         <li>Фризьорски Салон</li>
-         <li>Детски кът</li>
-         <li>Румсервиз</li>
-         <li>Пакети</li>
-     </ul>
- </div>
- <div>
-     <ul class="contacts">
-         <li><b>Рецепция:</b> +359 2 492 109</li>
-         <li><b>Моб:</b> +359 878 21 88 98</li>
-         <li><b>E-mail:</b> bluediamond@abv.bg</li>
-     </ul>
- </div>
-</section>
+            <div class="find">
+                <h6 class="mreji"> Намерете ни в социалните мрежи</h6>
+                <i class="fa fa-facebook-square"></i>
+                <i class="fa fa-instagram"></i>
+            </div>
+            <div class="divuslugi">
+                <h6 class="titleuslugi">Услуги</h6>
+                <ul class="uslugi">
+                    <li>Конферентни зали</li>
+                    <li>Фризьорски Салон</li>
+                    <li>Детски кът</li>
+                    <li>Румсервиз</li>
+                    <li>Пакети</li>
+                </ul>
+            </div>
+            <div>
+                <ul class="contacts">
+                    <h4 class="kntakti">Контакти</h4>
+                    <li><b>Рецепция:</b> +359 2 492 109</li>
+                    <li><b>Моб:</b> +359 878 21 88 98</li>
+                    <li><b>E-mail:</b> bluediamond@abv.bg</li>
+                </ul>
+            </div>
+        </section>
     </footer>
 </body>
+
 </html>
