--- a/galery.html
+++ b/galery.html
@@ -70,6 +70,7 @@
             </div>
             <div>
                 <ul class="contacts">
+                    <h4 class="kntakti">Контакти</h4>
                     <li><b>Рецепция:</b> +359 2 492 109</li>
                     <li><b>Моб:</b> +359 878 21 88 98</li>
                     <li><b>E-mail:</b> bluediamond@abv.bg</li>
