--- a/project.html
+++ b/project.html
@@ -78,8 +78,11 @@
         <section class="footer">
             <div class="find">
                 <h6 class="mreji"> Намерете ни в социалните мрежи</h6>
-                <i class="fa fa-facebook-square"></i>
-                <i class="fa fa-instagram"></i>
+                <ul class="socialnimreji">
+                    <li class="facebook"><i class="fa fa-facebook-square"></i></li>
+                    <li class="instagram"><i class="fa fa-instagram"></i></li>
+                    <li class="linkedin"><i class="fa fa-linkedin-square"></i></li>
+                </ul>
             </div>
             <div class="divuslugi">
                 <h6 class="titleuslugi">Услуги</h6>
@@ -92,8 +95,8 @@
                 </ul>
             </div>
             <div>
+                <h6 class="kntakti">Контакти</h6>
                 <ul class="contacts">
-                    <h4 class="kntakti">Контакти</h4>
                     <li><b>Рецепция:</b> +359 2 492 109</li>
                     <li><b>Моб:</b> +359 878 21 88 98</li>
                     <li><b>E-mail:</b> bluediamond@abv.bg</li>
