--- a/kontakti.html
+++ b/kontakti.html
@@ -56,6 +56,9 @@
             <div class="find">
                 <h6 class="mreji"> Намерете ни в социалните мрежи</h6>
                 <p>
+                    <li class="facebook"><i class="fa fa-facebook-square"></i></li>
+                    <li class="instagram"><i class="fa fa-instagram"></i></li>
+                    <li class="linkedin"><i class="fa fa-linkedin-square"></i></li>
                 </p>
             </div>
             <div class="divuslugi">
