--- a/kontakti.html
+++ b/kontakti.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="project.css">
+    <link rel="stylesheet" href="kontakti.css">
     <title>Document</title>
 </head>
 <header>
@@ -36,7 +37,7 @@
     </div>
 </header>
     <main>
-        <h3 class="cont">Контакти</h3>
+        <h3 class="contact">Контакти</h3>
         <section class="cardcontainer">
      <div><img class="map" src="pcs/Map_Primorsko.jpg" alt=""></div>
      <div class="address">
