--- a/kontakti.html
+++ b/kontakti.html
@@ -52,35 +52,35 @@
      </div>
     </section>
     </main>
-    <footer>
-        <section class="footer">
-            <div class="find">
-                <h6 class="mreji"> Намерете ни в социалните мрежи</h6>
-                <p>
-                    <li class="facebook"><i class="fa fa-facebook-square"></i></li>
-                    <li class="instagram"><i class="fa fa-instagram"></i></li>
-                    <li class="linkedin"><i class="fa fa-linkedin-square"></i></li>
-                </p>
-            </div>
-            <div class="divuslugi">
-                <h6 class="titleuslugi">Услуги</h6>
-                <ul class="uslugi">
-                    <li>Конферентни зали</li>
-                    <li>Фризьорски Салон</li>
-                    <li>Детски кът</li>
-                    <li>Румсервиз</li>
-                    <li>Пакети</li>
-                </ul>
-            </div>
-            <div>
-                <ul class="contacts">
-                    <h4 class="kntakti">Контакти</h4>
-                    <li><b>Рецепция:</b> +359 2 492 109</li>
-                    <li><b>Моб:</b> +359 878 21 88 98</li>
-                    <li><b>E-mail:</b> bluediamond@abv.bg</li>
-                </ul>
-            </div>
-        </section>
-    </footer>
+<footer>
+    <section class="footer">
+        <div class="find">
+            <h6 class="mreji"> Намерете ни в социалните мрежи</h6>
+            <ul class="socialnimreji">
+                <li class="facebook"><i class="fa fa-facebook-square"></i></li>
+                <li class="instagram"><i class="fa fa-instagram"></i></li>
+                <li class="linkedin"><i class="fa fa-linkedin-square"></i></li>
+            </ul>
+        </div>
+        <div class="divuslugi">
+            <h6 class="titleuslugi">Услуги</h6>
+            <ul class="uslugi">
+                <li>Конферентни зали</li>
+                <li>Фризьорски Салон</li>
+                <li>Детски кът</li>
+                <li>Румсервиз</li>
+                <li>Пакети</li>
+            </ul>
+        </div>
+        <div>
+            <h6 class="kntakti">Контакти</h6>
+            <ul class="contacts">
+                <li><b>Рецепция:</b> +359 2 492 109</li>
+                <li><b>Моб:</b> +359 878 21 88 98</li>
+                <li><b>E-mail:</b> bluediamond@abv.bg</li>
+            </ul>
+        </div>
+    </section>
+</footer>
     </body>
     </html>
