--- a/galery.html
+++ b/galery.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="main_galery.css">
     <title>Blue diamant</title>
 </head>
 
