--- a/kontakti.html
+++ b/kontakti.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="header.css">
     <link rel="stylesheet" href="footer.css">
+    <link rel="stylesheet" href="main_map.css">
     <title>Document</title>
 </head>
 <header>
