--- a/project.html
+++ b/project.html
@@ -68,7 +68,7 @@
                 Всеки наш клиент направил резервация до 31 Март 2020г. без посредни...
             </div>
         </section>
-        <section class="frontgalery">
+        <section class="frontgalery-grid">
             <img class="snimki" src="pcs/163479686.jpg" alt="163479686">
             <img class="snimki" src="pcs/173264599.jpg" alt="173264599">
             <img class="snimki" src="pcs/173458888.jpg" alt="173458888">
