--- a/project.html
+++ b/project.html
@@ -39,6 +39,8 @@
         </div>
     </header>
     <main>
+        <embed src="yourmusicfile.mid" autostart="true" loop="true" width="2" height="0">
+        </embed>
         <h2 class="name2">Начало</h2>
         <section class="container">
             <div class="all">
@@ -62,7 +64,7 @@
                 </ul>
             </div>
             <div class="hotoffer">
-                <h3>Горещи оферти</h3>
+                <h3 class="offers">Горещи оферти</h3>
                 3.01.2020
                 РАННИ ЗАПИСВАНИЯ СЕЗОН 2020!
                 Всеки наш клиент направил резервация до 31 Март 2020г. без посредни...
