--- a/home.html
+++ b/home.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="header.css">
-    <link rel="stylesheet" href="footer.css">
-    <link rel="stylesheet" href="main_nachalo.css">
+    <link rel="stylesheet" href="main-styles.css">
+
+    <link rel="stylesheet" href="home-content.css">
     <title>Blue diamant</title>
 </head>
+
 <body>
     <header>
         <nav class="nav">
@@ -23,7 +25,7 @@
                 <img class="diamond" src="pcs/diamond1.jpg">
             </div>
             <ul class="navigation">
-                <li><a href="project.html/">Начало</a></li>
+                <li><a href="home.html">Начало</a></li>
                 <li>Резервации</li>
                 <li>Настаняване</li>
                 <li><a href="galery.html">Галерия</a></li>
@@ -107,4 +109,5 @@
         </section>
     </footer>
 </body>
+
 </html>
