--- a/galery.html
+++ b/galery.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="header.css">
-    <link rel="stylesheet" href="footer.css">
-    <link rel="stylesheet" href="main_galery.css">
+    <link rel="stylesheet" href="main-styles.css">
+
+    <link rel="stylesheet" href="galery.css">
     <title>Blue diamant</title>
 </head>
 
@@ -25,7 +25,7 @@
                 <img class="diamond" src="pcs/diamond1.jpg">
             </div>
             <ul class="navigation">
-                <li><a href="project.html">Начало</a></li>
+                <li><a href="home.html">Начало</a></li>
                 <li>Резервации</li>
                 <li>Настаняване</li>
                 <li><a href="galery.html">Галерия</a></li>
@@ -43,9 +43,9 @@
     <main>
         <h2 class="hgalery">Галерия</h2>
         <section class="firstsection">
-        <img class="pichotel" src="pcs/Room.jpg" alt="Room">
-        <img class="pichotel" src="pcs/Hotel_.jpg" alt="hotel">
-        <img class="pichotel" src="pcs/lobby.jpg" alt="lobby">
+            <img class="pichotel" src="pcs/Room.jpg" alt="Room">
+            <img class="pichotel" src="pcs/Hotel_.jpg" alt="hotel">
+            <img class="pichotel" src="pcs/lobby.jpg" alt="lobby">
         </section>
         <section class="secondsection">
             <img class="pichotel" src="pcs/Restaurant.jpg" alt="Room">
@@ -84,4 +84,5 @@
         </section>
     </footer>
 </body>
+
 </html>
