--- a/kontakti.html
+++ b/kontakti.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="header.css">
-    <link rel="stylesheet" href="footer.css">
-    <link rel="stylesheet" href="main_map.css">
+    <link rel="stylesheet" href="main-styles.css">
+
+    <link rel="stylesheet" href="map.css">
     <title>Document</title>
 </head>
 <header>
@@ -22,7 +23,7 @@
             <img class="diamond" src="pcs/diamond1.jpg">
         </div>
         <ul class="navigation">
-            <li><a href="project.html">Начало</a></li>
+            <li><a href="home.html">Начало</a></li>
             <li>Резервации</li>
             <li>Настаняване</li>
             <li><a href="galery.html">Галерия</a></li>
@@ -37,22 +38,22 @@
         <img class="sea" src="pcs/181402759.jpg">
     </div>
 </header>
-    <main>
-        <h3 class="contact">Контакти</h3>
-        <section class="cardcontainer">
-     <div><img class="map" src="pcs/Map_Primorsko.jpg" alt=""></div>
-     <div class="address">
-        Хотел "Blue diamond" - гр. Приморско <br>
-        Адрес: Ул.”Бриз” 7,<br>
-        8183, гр. Приморско, България<br>
-        GPS координати: N 42.235887 E 27.777469<br>
-        Рецепция: +359 2 492 109<br>
-        Моб: +359 878 21 88 98<br>
-        web:www.bludiamond.com <br>
-        e-mail: info@bludiamond.com<br>
-     </div>
+<main>
+    <h3 class="contact">Контакти</h3>
+    <section class="cardcontainer">
+        <div><img class="map" src="pcs/Map_Primorsko.jpg" alt=""></div>
+        <div class="address">
+            Хотел "Blue diamond" - гр. Приморско <br>
+            Адрес: Ул.”Бриз” 7,<br>
+            8183, гр. Приморско, България<br>
+            GPS координати: N 42.235887 E 27.777469<br>
+            Рецепция: +359 2 492 109<br>
+            Моб: +359 878 21 88 98<br>
+            web:www.bludiamond.com <br>
+            e-mail: info@bludiamond.com<br>
+        </div>
     </section>
-    </main>
+</main>
 <footer>
     <section class="footer">
         <div class="find">
@@ -83,5 +84,6 @@
         </div>
     </section>
 </footer>
-    </body>
-    </html>
+</body>
+
+</html>
