--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="main-styles.css">
+    <link rel="stylesheet" href="main.css">
 
     <link rel="stylesheet" href="home-content.css">
     <title>Blue diamant</title>
@@ -43,7 +43,7 @@
     <main>
         <embed src="yourmusicfile.mid" autostart="true" loop="true" width="2" height="0">
         </embed>
-        <h2 class="name2">Начало</h2>
+        <h2 class="name2">Добре дошли!</h2>
         <section class="container">
             <div class="all">
                 <h3>Хотел Blue Diamond</h3>
