--- a/kontakti.html
+++ b/kontakti.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="main.css">
 
-    <link rel="stylesheet" href="map.css">
+    <link rel="stylesheet" href="kontakti.css">
     <title>Document</title>
 </head>
 <header>
